--- a/Index.html/Index.html
+++ b/Index.html/Index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color:rgb(rgb(68, 68, 68))">
+<body style="background-color:rgb(red, green, blue)">
 
     <hr>
 </body>
